--- a/libWgIM/libWgIM.vcxproj
+++ b/libWgIM/libWgIM.vcxproj
@@ -102,6 +102,7 @@
     <ClCompile Include="libwgim.cpp" />
     <ClCompile Include="messenger.cpp" />
     <ClCompile Include="network.cpp" />
+    <ClCompile Include="ping.cpp" />
     <ClCompile Include="tcp_client.cpp" />
     <ClCompile Include="utiliy.cpp" />
   </ItemGroup>
@@ -110,6 +111,7 @@
       <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles;.\..\include;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore</IncludePath>
       <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore</IncludePath>
     </QtMoc>
+    <ClInclude Include="ping.h" />
     <ClInclude Include="utiliy.h" />
     <QtMoc Include="dht.h">
       <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles;.\..\include;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore</IncludePath>
